--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,6 +9,7 @@
         Background="Transparent"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
+        Loaded="Window_Loaded"
         MouseLeftButtonDown="Window_MouseLeftButtonDown"
         
         WindowStyle="None">
@@ -89,18 +90,21 @@
                             Height="40" 
                             Width="168" 
                             Margin="25 50 0 0"
-                            Click="SignInButton_Click">
+                            Click="SignInButton_Click"
+                            Visibility="{Binding ButtonInShow}">
                         <TextBlock Text="Войти" 
                         FontSize="22" 
                         FontWeight="ExtraBold"/>
                     </Button>
+
+                    <TextBlock Text="{Binding Username}"/>
                     <Button HorizontalAlignment="Center" 
                             x:Name="SignOutButton"
                             Height="40" 
                             Width="168"
                             Margin="25"
                             Click="SignOutButton_Click"
-                            Visibility="Collapsed">
+                            Visibility="{Binding ButtonOutShow}">
                         <TextBlock Text="Выйти"
                                FontSize="22" 
                                FontWeight="ExtraBold"/>
@@ -114,13 +118,14 @@
                     <Button Background="Transparent"
                         BorderBrush="Transparent"
                         BorderThickness="0"
+                        Click="exit"
                         Padding="0"
                         Width="40"
                         Height="40"
                         Margin="0">
                         <Image Source="/image/Exit.png" 
                            Width="38" 
-                           Height="60" 
+                           Height="41" 
                            MouseLeftButtonUp="Image_MouseLeftButtonUp" RenderTransformOrigin="0.598,0.697"/>
                     </Button>
                 </StackPanel>
