--- a/Registrartion.xaml
+++ b/Registrartion.xaml
@@ -41,13 +41,14 @@
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="Никнейм" Style="{StaticResource textblock}"
                                    FontSize="20" Margin="19 20 0 5"/>
-                        <TextBox Margin="20 0 0 0" Height="30" TextChanged="TextBox_TextChanged"/>
+                        <TextBox Margin="20 0 0 0" Height="30"
+                                 x:Name="NicknamePolzovatel"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="Пароль" Style="{StaticResource textblock}"
                                    FontSize="20" Margin="19 20 0 5"/>
-                        <TextBox Margin="20 0 0 0" Height="30" />
+                        <TextBox Margin="20 0 0 0" Height="30"  x:Name="PasswordPolzovatel" />
                     </StackPanel>
                 </StackPanel>
 
@@ -61,6 +62,7 @@
                     <Border Background="Transparent" Grid.Column="0" CornerRadius="10">
                         <Button Content="Войти" Width="80" Height="30" VerticalAlignment="Top"
                                 HorizontalAlignment="Right"
+                                Click="VoitiVAkkaynt_Click"
                                 Margin="0 10 20 0" />
                     </Border>
 
